fix horizontal scrolling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,3 +57,13 @@ body {
 .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
+@media (pointer: coarse) {
+  html {
+    overscroll-behavior-x: none;
+  }
+  
+  body {
+    -webkit-overflow-scrolling: touch;
+  }
+}
